# ai-evaluation-intro

./: .env.template  .gitignore  README.md  agent_a.eval.jsonl  agent_a_evaluation_results.json  agent_b.eval.jsonl  agent_b_evaluation_results.json  azure_search_setup.py  config.py  demo-plan.md  demo_ai_foundry.ipynb  demo_ai_foundry_with_output.ipynb  demo_llm_as_judge.ipynb  demo_semantic_similarity.ipynb  eval.jsonl  eval.ouputs.json  main.py  presentation.ipynb  pyproject.toml  search_knowledge_base.py  test_cases.json
knowledge-base/: index.md
knowledge-base/core-business/: case-studies.md  company-overview.md  industry-expertise.md  service-offerings.md
knowledge-base/legal-admin/: data-security-protocols.md  master-services-agreement.md
knowledge-base/market-intelligence/: competitive-analysis.md  industry-trends-q4-2024.md
knowledge-base/methodologies/: best-practices-library.md  meridian-strategic-methodology.md  project-templates.md
knowledge-base/operations/: project-management-playbook.md
knowledge-base/people-expertise/: expert-profiles.md  organizational-structure.md  skills-matrix.md
knowledge-base/sales-proposals/: pricing-guidelines.md  proposal-templates.md
